  * Added support for setting the character set in the transport
    meta-information. This means that it is possible to set the
    character set via the interface. Please note that you cannot
    enforce a character set. (ticket #52)

2011-01-08  Michael Bell <michael.bell@web.de>
  * Added correct default behaviour to parse_charset. If no character
    set is specified in a WBXML document then UTF-8 is assumed until
    there is another specification in the transport meta-information.
    (ticket #52)
  * Fixed integer overflow in opaque data parsing (ticket #54).
    The patch was supplied by Amnon Aaronsohn.
  * Fixed iconv support (ticket #52)
  * Added several tokens for Microsoft ActiveSync v14.0 revision 8.0
    (ticket #53). The patch was supplied by Amnon Aaronsohn.
  * Fixed wrong WBXML table token for OMA DM DDF (ticket #51)
  * Fixed unsigned integer overflow (patch from ticket #41)
    The overflow causes crashs or wrong wbxml messages.
  * Fixed locations of variable definitions and replaced strtoull by
    strtoul (changes from ticket #42 and #50).
    This fixes some compiler errors from MS VisualStudio 2008 and 9.0.
  * Added support for recursion in wbxml_tree_node_elt_get_from_name
    (ticket #46)

2010-03-29  Michael Bell <michael.bell@web.de>
  * Released 0.10.8
  * Removed OMA DM tests because the OMA did not grant a permission
    for the inclusion (ticket #36).
  * Added a fix for the broken vFormat handling in the SyncML
    specification. All LFs are replaced by CRLFs in every vFormat
    object inside a SyncML message (ticket #38).
  * Added Nokia ConML support (ticket #35).
    There is no public documentation available from Nokia. The
    transformation tables were created from sniffed WBXML documents.
    The patch was supplied by Anton D. Kachalov.

2009-05-12  Michael Bell <michael.bell@web.de>
  * Released 0.10.7
  * Fixed a Debian MIPS port build issue (ticket #34)
    If the operating system environment has a built-in getopt